syntax = "proto3";
package sequencer;

import "bignum.proto";

option java_multiple_files = true;
option java_package = "xyz.funkybit.sequencer.proto";
option java_outer_classname = "CheckpointSchema";

message WithdrawalFee {
  string asset = 1;
  IntegerValue value = 2;
}

message BalancesCheckpoint {
  repeated Balance balances = 1;

  message Balance {
    uint64 account = 1;
    string asset = 2;
    IntegerValue amount = 3;
    repeated Consumption consumed = 4;

    message Consumption {
      string marketId = 1;
      IntegerValue consumed = 2;
    }
  }
}

message MarketCheckpoint {
  string id = 1;
  DecimalValue tickSize = 2;
  uint32 maxOrdersPerLevel = 3;
  uint32 baseDecimals = 4;
  uint32 quoteDecimals = 5;
  int32 maxOfferIx = 6;
  int32 bestOfferIx = 7;
  int32 bestBidIx = 8;
  int32 minBidIx = 9;
  repeated OrderBookLevel levels = 10;
  IntegerValue minFee = 11;

  message OrderBookLevel {
    int32 levelIx = 1;
    BookSide side = 2;
    DecimalValue price = 3;
    uint32 maxOrderCount = 4;
    IntegerValue totalQuantity = 5;
    uint32 orderHead = 6;
    uint32 orderTail = 7;
    repeated LevelOrder orders = 8;
  }

  enum BookSide {
    Buy = 0;
    Sell = 1;
  }

  message LevelOrder {
    uint64 guid = 1;
    uint64 account = 2;
    IntegerValue quantity = 3;
    IntegerValue originalQuantity = 5;
    uint64 feeRate = 6;
  }
}
